fix code readability

--- a/server/public/main.css
+++ b/server/public/main.css
@@ -1,3 +1,3 @@
-tr.incomplete td {
+tr.complete td {
    color: grey;
 }
